	* fixed: although set, the job type (ie: full time, part time) was not remembered in the pagination process and thus the pagination was incorrect
	* fixed: a database query exception was thrown if more than one city was found from the search keywords
	* fixed: the URLs in the mail that is sent after a job is actived by the administrator are wrong
	* new: possibility to show cities in sidebar instead of categories (configurable from config.php)
	* new: SEO for Job Categories - thanks to CtCoder
	* new: spotlight jobs (sponsored jobs) - thanks to CtCoder
	* new: 'Edit post' functionality in admin

version 1.5 beta 1 (20/08/2008):
  * Admin bug fix - activation/deactivation of ads now works
	* Other small fixes (search, mostly)

version 1.4:
	* Fixed bug that caused alternate location to be deleted when editing a job posting
	* Fixed bug that sent a notification e-mail whenever a user edited a job posting
	* Other small fixes

version 1.4 beta 1:
	* Fixed: proper url encoding done in JavaScript for search requests
	* Fixed: search escaping
	* Added: simple page editing for static pages
	* Added: categories management
	* Enhanced: backend javascript
	* Added/Changed: translations based on an ini file
	* Added: option to change the admin password
	* Fixed: security issue

version 1.3 (30/01/2008):
    * Fixed more search-related bugs (thanks to Mitchell Lane <mdlane@alumni.clemson.edu>)

version 1.3 (30/01/2008):
    * Added an admin panel (thanks to Lavinia Creivean <links_clm@yahoo.com>)
    * Added a survey page: the ideal job (as seen on www.jobber.ro/jobul-ideal/)
    * Improved pagination support (thanks to Mihai Mocanu)
    * Fixed some bugs related to search
    * Translated the sitemap page (forgot to do it, before :p)

version 1.2 (12/11/2007):
    * Added pagination support, active by default (thanks to Adrian Rusu-Scurtu!)

version 1.1 (11/28/2007):
    * Modified the directory structure and moved the entire application into /app subdirectory.